--- a/index.html
+++ b/index.html
@@ -2,22 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cosmos Animation</title>
     <link rel="icon" href="images/cloud1.png">
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <main>
-        <section class="section">
-            <div class="background">          
-                <img class="cloud1" src="images/cloud1.png" alt="cloud">
-                <img class="cloud2" src="images/cloud2.png" alt="cloud">
-                <img class="plane" src="images/plane.png" alt="plane">
-                <img class="plane2" src="images/rotateplane.png" alt="plane">
-            </div>
-        </section>
-    </main>
+    <div class="Animation" >  
+        <img class="background-image" src="images/background-image.jpg" alt="sky">
+         <img class="cloud1" src="images/cloud1.png" alt="cloud">
+         <img class="cloud2" src="images/cloud2.png" alt="cloud2">
+         <img class="plane" src="images/plane.png" alt="plane">
+         <img class="plane2" src="images/rotateplane.png" alt="plane">
+    </div>
 
 </body>
 </html>
