--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="Animation" >  
-        <img class="background-image" src="images/background-image.jpg" alt="sky">
+        <img class="background-image" src="images/background.jpg" alt="sky">
          <img class="cloud1" src="images/cloud1.png" alt="cloud">
          <img class="cloud2" src="images/cloud2.png" alt="cloud2">
          <img class="plane" src="images/plane.png" alt="plane">
